--- a/Pages/chars/charInfo.html
+++ b/Pages/chars/charInfo.html
@@ -456,11 +456,11 @@
 <div class="line single"></div>
 
 <section class="jewel-section">
-<h2>* 주얼</h2>
+<h2>* 흔적</h2>
 <div class="jewel-grid">
-{{#each {{getvar::juelList}} juel}}
-{{#when::{{dict_element::{{getvar::targetJuel}}::{{slot::juel}}}}::isnot::0}}
-<div class="talent-tag"><strong>{{slot::juel}}:</strong> {{dict_element::{{getvar::targetJuel}}::{{slot::juel}}}}</div>
+{{#each {{getvar::traceList}} trace}}
+{{#when::{{dict_element::{{getvar::targetTrace}}::{{slot::trace}}}}::isnot::0}}
+<div class="talent-tag"><strong>{{slot::trace}}:</strong> {{dict_element::{{getvar::targetTrace}}::{{slot::trace}}}}</div>
 {{/when}}
 {{/each}}
 </div>
