--- a/Pages/train/train.html
+++ b/Pages/train/train.html
@@ -449,12 +449,11 @@ visibility: hidden;
 <div class="stat-item"><span class="stat-label">욕정</span> <div class="rating heart {{#when::{{dict_element::{{getvar::stat}}::욕정}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::욕정}}"></div></div>
 <div class="stat-item"><span class="stat-label">온순</span> <div class="rating heart {{#when::{{dict_element::{{getvar::stat}}::온순}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::온순}}"></div></div>
 <div class="stat-item"><span class="stat-label">굴복</span> <div class="rating {{#when::{{? {{tonumber::{{dict_element::{{getvar::target}}::봉사기술}}}}>4}}::or::{{? {{tonumber::{{dict_element::{{getvar::target}}::복종각인}}}}>0}}}}heart{{:else}}skull{{/when}} {{#when::{{dict_element::{{getvar::stat}}::굴복}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::굴복}}"></div></div>
-<div class="stat-item"><span class="stat-label">습득</span> <div class="rating heart {{#when::{{dict_element::{{getvar::stat}}::습득}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::습득}}"></div></div>
 <div class="stat-item"><span class="stat-label">수치</span> <div class="rating {{#when::{{? {{tonumber::{{dict_element::{{getvar::target}}::노출벽}}}}>4}}}}heart{{:else}}skull{{/when}} {{#when::{{dict_element::{{getvar::stat}}::수치}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::수치}}"></div></div>
 <div class="stat-item"><span class="stat-label">고통</span> <div class="rating {{#when::{{? {{tonumber::{{dict_element::{{getvar::target}}::마조끼}}}}>4}}}}heart{{:else}}skull{{/when}} {{#when::{{dict_element::{{getvar::stat}}::고통}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::고통}}"></div></div>
 <div class="stat-item"><span class="stat-label">공포</span> <div class="rating skull {{#when::{{dict_element::{{getvar::stat}}::공포}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::공포}}"></div></div>
 <div class="stat-item"><span class="stat-label">불쾌</span> <div class="rating skull {{#when::{{dict_element::{{getvar::stat}}::불쾌}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::불쾌}}"></div></div>
-<div class="stat-item"><span class="stat-label">부정</span> <div class="rating skull {{#when::{{dict_element::{{getvar::stat}}::부정}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::부정}}"></div></div>
+<div class="stat-item"><span class="stat-label">저항</span> <div class="rating skull {{#when::{{dict_element::{{getvar::stat}}::저항}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::저항}}"></div></div>
 </div>
 </section>
 
