--- a/Pages/train/postTrain.html
+++ b/Pages/train/postTrain.html
@@ -48,7 +48,7 @@ font-weight: bold;
 <div class="line single"></div>
 
 <section class="jewel-section">
-<h2>* 흔적</h2>
+<h2>* 조교의 흔적</h2>
 <div class="stats-grid">
 {{#each {{getvar::traceList}} trace}}
 <div class="stat-item">
