--- a/Pages/train/postTrain.html
+++ b/Pages/train/postTrain.html
@@ -24,18 +24,25 @@ font-family: monospace;
 font-weight: bold;
 }
 .x-risu-btn:hover {
-    background-color: #888;
-    border-color: #aaa;
+background-color: #888;
+border-color: #aaa;
 }
+.lvUpConditions{
+border-color: #a00606;
+}
+.lvUpConditions.x-risu-available{
+border-color: #07b218;
+}
+
 @media screen and (max-width: 600px) {
-    .stats-grid {
-    font-size: 0.8rem;
-    grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
-    padding: 0.3rem;
-    }
-    .stat-item {
-        padding: 0.2rem;
-    }
+.stats-grid {
+font-size: 0.8rem;
+grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
+padding: 0.3rem;
+}
+.stat-item {
+padding: 0.2rem;
+}
 }
 </style>
 
@@ -73,12 +80,17 @@ font-weight: bold;
 <section class="ability-section">
 <h2>* 능력 업그레이드</h2>
 <div class="stats-grid">
+{{#when::{{? {{getvar::selectedAbl}}=="none"}}}}
 {{#each {{getvar::ablList}} abil}}
 <div class="stat-item btn" risu-btn="{{slot::abil}}">
 <span class="stat-label">{{slot::abil}}</span>
 <div class="rating heart {{#when::{{dict_element::{{getvar::target}}::{{slot::abil}}}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::target}}::{{slot::abil}}}}"></div>
 </div>
 {{/each}}
+{{/when}}
+{{#when::{{? {{getvar::selectedAbl}}!="none"}}}}
+{{getvar::selectedAbl}}
+{{/when}}
 </div>
 </section>
 
