버튼 마우스오버효과를 더 세련되게 변경 가로폭이 좁으면 모바일로 간주하고 abl렙업 버튼호벼효과를 상시표시

--- a/Pages/train/postTrain.html
+++ b/Pages/train/postTrain.html
@@ -23,17 +23,14 @@ color: #fff;
 font-family: monospace;
 font-weight: bold;
 }
-.x-risu-btn:hover {
-background-color: #888;
-border-color: #aaa;
-}
-.lvUpConditions{
-box-shadow: 0px 0px 10px -2px #a00606;
+.x-risu-btn{
 border-radius: 0.2rem;
 }
-.lvUpConditions.x-risu-available{
-box-shadow: 0px 0px 10px -2px #07b218;
-border-radius: 0.2rem;
+.lvUpConditions.x-risu-available:hover{
+box-shadow: 0px 0px 20px -2px #07b218;
+}
+.lvUpConditions.x-risu-notAvailable:hover{
+box-shadow: 0px 0px 20px -2px #a00606;
 }
 
 @media screen and (max-width: 600px) {
@@ -44,6 +41,12 @@ padding: 0.3rem;
 }
 .stat-item {
 padding: 0.2rem;
+}
+.available{
+box-shadow: 0px 0px 20px -2px #07b218;
+}
+.notAvailable{
+box-shadow: 0px 0px 20px -2px #a00606;
 }
 }
 </style>
