--- a/Pages/Shop/shop.html
+++ b/Pages/Shop/shop.html
@@ -18,24 +18,11 @@ display: block;
 animation: fadeIn 0.3s ease-in-out;
 }
 
-/* Tab switching logic 
-#tab-tools:checked ~ .shop-content > #tools-pane,
-#tab-consumables:checked ~ .shop-content > #consumables-pane,
-#tab-traps:checked ~ .shop-content > #traps-pane {
-display: block;
-}
-
-input[name="shop-tabs"]:checked + label {
-background-color: #666;
-border-color: #888;
-color: #fff;
-}*/
-
 /* Item grid and card styles */
 .shop-item-grid {
 display: grid;
 grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-gap: 1rem;
+gap: 0.5rem 1rem;
 }
 
 .shop-item {
@@ -43,33 +30,22 @@ display: flex;
 align-items: center;
 gap: 1rem;
 background-color: #444;
-padding: 0.15rem;
-border-radius: 4px;
+padding: 0.2rem;
+border-radius: 0.5rem;
 border: 2px solid #555;
 transition: background-color 0.2s, border-color 0.2s;
 cursor: pointer;
-}
-.shop-item:hover {
-background-color: #4f4f4f;
-}
-.shop-item.selected {
-border-color: #ffffbf;
-background-color: #4a4a4a;
 }
 
 .item-image {
 width: 64px;
 height: 64px;
-background-color: #2a2a2a;
-border: 1px solid #666;
-border-radius: 4px;
+border-radius: 0.5rem;
 flex-shrink: 0;
-/* Basic icon for placeholder */
 display: flex;
 align-items: center;
 justify-content: center;
-color: #777;
-font-size: 2rem;
+overflow: hidden;
 }
 
 .item-info {
@@ -151,11 +127,6 @@ transition: background-color 0.2s;
 .quantity-btn:hover {
 background-color: #6a6a6a;
 }
-.quantity-btn:disabled {
-background-color: #333;
-color: #777;
-cursor: not-allowed;
-}
 
 .quantity-display {
 width: 30px;
@@ -179,11 +150,67 @@ color: #ffffbf;
 margin-left: 0.5rem;
 }
 
+.price-value.x-risu-exceed{
+color: red;
+}
+
 .purchase-btn {
 padding: 0.5rem 1.5rem;
 font-size: 1em;
 font-weight: bold;
 background-color: #5a5a5a;
+}
+
+.purchase-btn.x-risu-exceed:hover{
+box-shadow: 0px 0px 20px -2px #a00606;
+}
+
+.item-detail{
+width:100%
+}
+
+.purchased {
+position: fixed;
+top: 50%;
+left: 0;
+width: 100%;
+transform: translateY(-50%);
+background-color: rgba(0, 0, 0);
+color: #fff;
+font-size: 3em;
+font-weight: bold;
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100px;
+opacity: 0;
+visibility: hidden;
+animation: purchase-animation 1.1s forwards;
+z-index: 100;
+}
+
+/* 구매 애니메이션 키프레임 */
+@keyframes purchase-animation {
+0% {
+opacity: 0;
+visibility: hidden;
+}
+1% {
+opacity: 0;
+visibility: visible;
+}
+10% {
+opacity: 1;
+visibility: visible;
+}
+60% {
+opacity: 1;
+visibility: visible;
+}
+100% {
+opacity: 0;
+visibility: hidden;
+}
 }
 
 @keyframes fadeIn {
@@ -216,6 +243,9 @@ order: 3; /* Appears last */
 .purchase-footer {
 gap: 0.1rem;
 }
+.purchase-btn.x-risu-exceed{
+box-shadow: 0px 0px 20px -2px #a00606;
+}
 }
 </style>
 
@@ -232,9 +262,10 @@ gap: 0.1rem;
 <main>
 
 <div class="shop-tabs">
-<label class="x-risu-btn" risu-btn="shop_tools">조교도구</label>
-<label class="x-risu-btn" risu-btn="shop_consumables">소모품</label>
-<label class="x-risu-btn" risu-btn="shop_traps">함정</label>
+<label class="btn" risu-btn="shop_tools">조교도구</label>
+<label class="btn" risu-btn="shop_consumables">소모품</label>
+<label class="btn" risu-btn="shop_traps">함정</label>
+<label class="btn" risu-btn="shop_unlock">마계지식</label>
 </div>
 
 <!-- Tab content -->
@@ -251,19 +282,22 @@ gap: 0.1rem;
 <div class="purchase-footer">
 <div class="purchase-controls">
 <div class="selected-item-display">
-<span class="selected-item-name">아이템을 선택하세요</span>
+<span class="selected-item-name">{{getvar::itemName}}</span>
 </div>
+{{#when::itemCat::vis::조교도구}}{{:else}}
 <div class="item-quantity-selector">
-<button class="quantity-btn minus" aria-label="수량 감소">-</button>
-<span class="quantity-display">0</span>
-<button class="quantity-btn plus" aria-label="수량 증가">+</button>
+<button class="quantity-btn" risu-btn="minus">-</button>
+<span class="quantity-display">{{getvar::itemQuantity}}</span>
+<button class="quantity-btn" risu-btn="plus">+</button>
 </div>
+{{/when}}
 </div>
 <div class="total-price">
 <span>총 금액:</span>
-<span class="price-value">0 Gold</span>
+<span class="price-value {{#if {{? {{tonumber::{{getvar::itemTotalPrice}}}}>{{tonumber::{{getvar::gold}}}}}}}}exceed{{/if}}">{{getvar::itemTotalPrice}} Gold</span>
 </div>
-<button class="x-risu-btn purchase-btn">구매하기</button>
+<button class="btn purchase-btn {{#if {{? {{tonumber::{{getvar::itemTotalPrice}}}}>{{tonumber::{{getvar::gold}}}}}}}}exceed{{/if}}" risu-btn="purchase">구매하기</button>
+<div class="item-detail">{{getvar::itemDetail}}</div>
 </div>
 </main>
 
@@ -276,90 +310,3 @@ gap: 0.1rem;
 </section>
 <div class="line double"></div>
 </div>
-
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-const shopItems = document.querySelectorAll('.shop-item');
-const selectedItemNameEl = document.querySelector('.selected-item-name');
-const quantityDisplayEl = document.querySelector('.quantity-display');
-const plusBtn = document.querySelector('.quantity-btn.plus');
-const minusBtn = document.querySelector('.quantity-btn.minus');
-const totalPriceValueEl = document.querySelector('.price-value');
-
-let cart = {};
-let selectedItem = null;
-
-// Initialize cart and event listeners for all items
-shopItems.forEach(item => {
-const name = item.dataset.name;
-cart[name] = {
-quantity: 0,
-price: parseInt(item.dataset.price, 10),
-element: item
-};
-
-item.addEventListener('click', () => {
-selectItem(name);
-});
-});
-
-function selectItem(itemName) {
-// Update selected state
-selectedItem = itemName;
-
-// Update UI for all items
-shopItems.forEach(item => {
-if (item.dataset.name === itemName) {
-item.classList.add('selected');
-} else {
-item.classList.remove('selected');
-}
-});
-
-// Update control panel
-selectedItemNameEl.textContent = selectedItem;
-updateControlsUI();
-}
-
-function changeQuantity(amount) {
-if (!selectedItem) return;
-
-const item = cart[selectedItem];
-const newQuantity = item.quantity + amount;
-
-if (newQuantity >= 0) {
-item.quantity = newQuantity;
-updateControlsUI();
-updateTotalPrice();
-}
-}
-
-function updateControlsUI() {
-if (!selectedItem) {
-quantityDisplayEl.textContent = '0';
-plusBtn.disabled = true;
-minusBtn.disabled = true;
-return;
-}
-
-const item = cart[selectedItem];
-quantityDisplayEl.textContent = item.quantity;
-plusBtn.disabled = false;
-minusBtn.disabled = item.quantity <= 0;
-}
-
-function updateTotalPrice() {
-let total = 0;
-for (const itemName in cart) {
-total += cart[itemName].quantity * cart[itemName].price;
-}
-totalPriceValueEl.textContent = `${total} Gold`;
-}
-
-plusBtn.addEventListener('click', () => changeQuantity(1));
-minusBtn.addEventListener('click', () => changeQuantity(-1));
-
-// Initial state of controls
-updateControlsUI();
-});
-</script>
