도구계 조교커맨드 등장조건 설정

--- a/Pages/train/train.html
+++ b/Pages/train/train.html
@@ -443,7 +443,10 @@ visibility: hidden;
 {{#when::{{dict_element::{{getvar::target}}::인후성감}}::vis::1}}
 <div class="stat-item"><span class="stat-label">M쾌락</span> <div class="rating heart {{#when::{{dict_element::{{getvar::stat}}::M쾌락}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::M쾌락}}"></div></div>
 {{/when}}
+<!--
+S쾌락은 일단 숨겨두기
 <div class="stat-item"><span class="stat-label">S쾌락</span> <div class="rating heart {{#when::{{dict_element::{{getvar::stat}}::S쾌락}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::S쾌락}}"></div></div>
+-->
 <div class="stat-item"><span class="stat-label">V윤활</span> <div class="rating heart {{#when::{{dict_element::{{getvar::stat}}::V윤활}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::V윤활}}"></div></div>
 <div class="stat-item"><span class="stat-label">A윤활</span> <div class="rating heart {{#when::{{dict_element::{{getvar::stat}}::A윤활}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::A윤활}}"></div></div>
 <div class="stat-item"><span class="stat-label">욕정</span> <div class="rating heart {{#when::{{dict_element::{{getvar::stat}}::욕정}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::stat}}::욕정}}"></div></div>
