상점페이지 깜빡거리는 문제 해결을 위해 fade in 스타일 제거

--- a/Pages/Shop/shop.html
+++ b/Pages/Shop/shop.html
@@ -15,7 +15,7 @@ border-radius: 4px;
 
 .shop-pane {
 display: block;
-animation: fadeIn 0.3s ease-in-out;
+/*animation: fadeIn 0.3s ease-in-out;*/
 }
 
 /* Item grid and card styles */
