--- a/Pages/Shop/shop.html
+++ b/Pages/Shop/shop.html
@@ -307,6 +307,7 @@ box-shadow: 0px 0px 20px -2px #a00606;
 <div class="command-container">
 {{getVar::cmds}}
 </div>
+{{getvar::screenEffect}}
 </section>
 <div class="line double"></div>
 </div>
