--- a/Pages/train/train.html
+++ b/Pages/train/train.html
@@ -245,6 +245,98 @@ height: 0.6rem;
     }
 }
 
+
+/*조교실패&대성공 전역화면효과*/
+.log-wrapper {
+position: relative; /* Container for the absolute positioned overlay */
+}
+
+.success-animation {
+position: absolute;
+inset: 0; /* a modern way for top/right/bottom/left: 0 */
+z-index: 10;
+overflow: hidden; /* Hide panels as they move out */
+animation: hide-container 0.2s 0.8s forwards;
+}
+
+/* The two black panels covering the content */
+.success-animation::before,
+.success-animation::after {
+content: '';
+position: absolute;
+top: 0;
+width: 50.5%; /* Overlap slightly to prevent a 1px gap during animation */
+height: 100%;
+background-color: #111; /* Match log background */
+animation: open-panels 0.4s ease-in-out 0.6s forwards;
+}
+
+.success-animation::before {
+left: 0;
+transform-origin: left;
+}
+
+.success-animation::after {
+right: 0;
+transform-origin: right;
+}
+
+.animation-text {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+
+font-size: 3em;
+font-weight: bold;
+font-family: 'Arial Black', sans-serif;
+
+z-index: 1; /* Above panels */
+white-space: nowrap; /* Prevent text wrapping */
+animation: text-appear-and-fade 1s ease-in-out forwards;
+}
+.success{
+    color: #f8c65c;
+    text-shadow: 0 0 10px #f8c65c, 0 0 20px #d1843c;
+}
+
+.fail{
+    color: #dc4747;
+    text-shadow: 0 0 10px #f8c65c, 0 0 20px #d1843c;
+}
+
+@keyframes text-appear-and-fade {
+0% {
+opacity: 0;
+transform: translate(-50%, -50%) scale(0.8);
+}
+5% { /* Appear */
+opacity: 1;
+transform: translate(-50%, -50%) scale(1);
+}
+100% { /* Fade out */
+opacity: 0;
+transform: translate(-50%, -50%) scale(1.1);
+}
+}
+
+@keyframes open-panels {
+from {
+transform: scaleX(1);
+}
+to {
+transform: scaleX(0);
+}
+}
+
+@keyframes hide-container {
+to {
+/* Hides the element and makes it non-interactive */
+visibility: hidden;
+}
+}
+
+
 @media screen and (max-width: 600px) {
     .stat-label {
         font-size: 0.8rem;
