tab container css 스타일 수정

--- a/Pages/Shop/shop.html
+++ b/Pages/Shop/shop.html
@@ -261,11 +261,11 @@ box-shadow: 0px 0px 20px -2px #a00606;
 
 <main>
 
-<div class="shop-tabs">
-<label class="btn" risu-btn="shop_tools">조교도구</label>
-<label class="btn" risu-btn="shop_consumables">소모품</label>
-<label class="btn" risu-btn="shop_traps">함정</label>
-<label class="btn" risu-btn="shop_unlock">마계지식</label>
+<div class="tabs-container">
+<label class="btn tabs" risu-btn="shop_tools">조교도구</label>
+<label class="btn tabs" risu-btn="shop_consumables">소모품</label>
+<label class="btn tabs" risu-btn="shop_traps">함정</label>
+<label class="btn tabs" risu-btn="shop_unlock">마계지식</label>
 </div>
 
 <!-- Tab content -->
