--- a/Pages/chars/charInfo.html
+++ b/Pages/chars/charInfo.html
@@ -278,11 +278,11 @@
 <div class="line single"></div>
 
 <section class="detailed-info">
-<input type="radio" name="detail-tabs" id="abl-tab" hidden>
-<input type="radio" name="detail-tabs" id="exp-tab" hidden>
-<input type="radio" name="detail-tabs" id="talents-tab" hidden>
-<input type="radio" name="detail-tabs" id="appearance-tab" checked hidden>
-<input type="radio" name="detail-tabs" id="narrative-tab" hidden>
+<input type="radio" name="tabs" id="abl-tab" hidden>
+<input type="radio" name="tabs" id="exp-tab" hidden>
+<input type="radio" name="tabs" id="talents-tab" hidden>
+<input type="radio" name="tabs" id="appearance-tab" checked hidden>
+<input type="radio" name="tabs" id="narrative-tab" hidden>
 <div class="tabs-container">
 <label for="appearance-tab" class="x-risu-btn tabs">▋외모</label>
 <label for="abl-tab" class="x-risu-btn tabs">▋능력</label>
